Start and Problem1 of HW2

--- a/homework1/Problem1.ipynb
+++ b/homework1/Problem1.ipynb
@@ -30,7 +30,6 @@
    "source": [
     "# Pkg.add(\"MAT\")\n",
     "# Pkg.add(\"Seaborn\")\n",
-    "# Pkg.add(\"Images\")\n",
     "# Pkg.add(\"StatsBase\")\n",
     "# Pkg.checkout(\"MAT\") - if issues, checkout master branch"
    ]
@@ -207,9 +206,9 @@
    ],
    "source": [
     "using MAT\n",
-    "using Seaborn\n",
+    "# using Seaborn\n",
     "using PlotlyJS\n",
-    "using Images\n",
+    "import PyPlot.imshow\n",
     "using StatsBase"
    ]
   },
